# resql

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  README.md  environment.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml  tests.yml
.run/: FastAPI Example.run.xml
examples/fastapi/: error_handlers.py  main.py  models.py  settings.py
examples/fastapi/database/: __init__.py  models.py
examples/fastapi/endpoints/: countries.py  person.py
resql/: auditing.py  change_log.py  main.py  models.py  query_log.py  util.py
resql/database/: auditing.py  connection.py  models.py  models_audit.py  models_recovery.py
tests/: conftest.py  database.py  models.py  settings.py  utils.py
tests/auditing/: test_insert.py  test_update.py
tests/change_log/: test_delete.py  test_insert.py  test_update.py
tests/query_log/: test_insert.py  test_select.py
