[tool.poetry]
name = "resql"
version = "0.1.0"
description = ""
authors = ["Gabriel Galli <ggabriel96@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.11"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.902"
pylint = "^2.8.3"
sqlalchemy2-stubs = "^0.0.1-alpha.4"
pytest = "^6.2.3"
pydantic = "^1.8.1"
pre-commit = "^2.12.1"
fastapi = {extras = ["all"], version = "^0.63.0"}
pytest-cov = "^2.11.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
pretty = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.messages-control]
disable = ["duplicate-code", "missing-class-docstring", "missing-function-docstring", "missing-module-docstring", "too-few-public-methods"]

[tool.pylint.format]
max-line-length = 120
good-names = ["_", "db", "ex", "id", "of", "pk", "to"]
