[tool.poetry]
name = "resql"
version = "0.1.0"
description = "A database auditing and recovery library based on SQLAlchemy"
authors = ["Gabriel Galli <ggabriel96@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.11"
SQLAlchemy-Utc = "^0.12.0"

[tool.poetry.dev-dependencies]
PyMySQL = "^1.0.2"
black = "^21.6b0"
commitizen = "^2.17.9"
fastapi = {extras = ["all"], version = "^0.66.0"}
freezegun = "^1.1.0"
isort = "^5.9.2"
mypy = "^0.902"
pre-commit = "^2.12.1"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.1"
pylint = "^2.8.3"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
sqlalchemy2-stubs = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
pretty = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.messages-control]
disable = ["duplicate-code", "missing-class-docstring", "missing-function-docstring", "missing-module-docstring", "too-few-public-methods"]

[tool.pylint.design]
max-attributes = 10

[tool.pylint.format]
max-line-length = 120
good-names = ["_", "db", "ex", "id", "of", "pk", "to"]
